--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drag&Drop</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Understanding TypeScript</title>
+
 </head>
 
 <body>
-
-    <script src="app.js" defer></script>
+    <script src="src/app.js" defer></script>
 </body>
 
 </html>
